Translated about-us.html to about.pug

--- a/views/about.pug
+++ b/views/about.pug
@@ -4,15 +4,12 @@ block content
 			.about-us__section
 				h2.about-us__heading OM OSS
 				.about-us__content
-					img.about-us__map-image(src="./src/assets/images/LocationMap.png" alt="Kino Bio Map")
+					img.about-us__map-image(src="./static/assets/images/LocationMap.png" alt="Kino Bio Map")
 					.about-us__text
 						p
-							| 
-Välkommen till 
+							|Välkommen till 
 							strong Kino
-							| , din lokala biograf i hjärtat av 
-							strong Uppsala
-							| ! Vi är passionerade filmälskare som strävar efter att erbjuda en unik och minnesvärd filmupplevelse för alla våra besökare.
+							|, din lokala biograf i hjärtat av Uppsala! Vi är passionerade filmälskare som strävar efter att erbjuda en unik och minnesvärd filmupplevelse för alla våra besökare.
 
 						p.
 							
@@ -23,10 +20,9 @@ Välkommen till
 							Vårt mål är att skapa en plats där filmkonst, gemenskap och kultur möts. Vi erbjuder bekväma salonger, modern teknik och en mysig atmosfär som gör varje filmkväll till något speciellt.
 							
 						p
-							| 
-Dessutom anordnar vi regelbundet specialevenemang, filmfestivaler och temakvällar för att fira den rika mångfalden inom filmkonsten. Oavsett om du är här för att se en blockbuster, en dokumentär eller en klassiker, ser vi fram emot att välkomna dig till 
+							|Dessutom anordnar vi regelbundet specialevenemang, filmfestivaler och temakvällar för att fira den rika mångfalden inom filmkonsten. Oavsett om du är här för att se en blockbuster, en dokumentär eller en klassiker, ser vi fram emot att välkomna dig till 
 							strong Kino
-							| . Tillsammans skapar vi minnen som varar livet ut!
+							|. Tillsammans skapar vi minnen som varar livet ut!
 
 				p Daghammarskjölds vägen 10B, 75237, UPPSALA
 		//  om oss ends 
@@ -88,7 +84,7 @@ Dessutom anordnar vi regelbundet specialevenemang, filmfestivaler och temakväll
 								
 								Ingen konsumtion av olagliga substanser är tillåten, och alkoholförsäljning sker endast till personer över 18 år.
 								
-					img.rules__image(src="/src/assets/images/rulesImage.jpg" alt="the grinch holding a sign saying Rules")
+					img.rules__image(src="./static/assets/images/rulesImage.jpg" alt="the grinch holding a sign saying Rules")
 		//  rules end 
 		//  Q&A faq 
 		section.faq
@@ -96,7 +92,7 @@ Dessutom anordnar vi regelbundet specialevenemang, filmfestivaler och temakväll
 				h2.faq__heading FRÅGOR & SVAR
 				.faq__content
 					.faq__container--image
-						img.faq__image(src="src/assets/images/QnAImage.jpg" alt="an image saying Q and A")
+						img.faq__image(src="./static/assets/images/QnAImage.jpg" alt="an image saying Q and A")
 					.faq__question-container
 						h3.faq__question Vad är Kino?
 						p.faq__answer.
@@ -144,38 +140,3 @@ Dessutom anordnar vi regelbundet specialevenemang, filmfestivaler och temakväll
 							För att inte störa filmen rekommenderar vi att komma i god tid innan visningen börjar. Om du kommer för sent kan det vara svårt att komma in, men vi gör vårt bästa för att hjälpa dig om situationen uppstår.
 							
 		//  Q&A end 
-		.line-container
-			.horizontal-line
-		//  footer 
-		footer.footer
-			.footer__section
-				h2.footer__heading OM OSS
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") OM KINO
-					li.footer__item
-						a.footer__link(href="#") FRÅGOR & SVAR
-					li.footer__item
-						a.footer__link(href="#") KONTAKTA OSS
-			.footer__section
-				h2.footer__heading BIOUPPLEVELSER
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") PRESENTKORT
-					li.footer__item
-						a.footer__link(href="#") FESTIVALER
-					li.footer__item
-						a.footer__link(href="#") BIOPASSET
-					li.footer__item
-						a.footer__link(href="#") BISTROBIO
-					li.footer__item
-						a.footer__link(href="#") EVENT
-			.footer__section
-				h2.footer__heading SOCIAL
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") FACEBOOK
-					li.footer__item
-						a.footer__link(href="#") INSTAGRAM
-		//  footer ends 
-		script(type="module" src="/src/main.js")
