--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width,initial-scale=1")
-		link(rel="stylesheet" href="./static/styles/styles.scss")
+		link(rel="stylesheet" href="/static/styles/styles.scss")
 		title Kino-bio-page
 	body
 include header.pug
