--- a/views/header.pug
+++ b/views/header.pug
@@ -18,7 +18,7 @@ header.header
 					a(href="#") MEDLEMSKAP
 				li.hamburger__list
 					a(href="/about") OM OSS
-			a(href="https://klumpish.github.io/kino-bio-projekt/#")
+			a(href="/")
 				.header__logo
 			nav.header__nav
 				ul.header__nav-list
