--- a/views/movies.pug
+++ b/views/movies.pug
@@ -1,60 +1,4 @@
-doctype html
-html(lang="en")
-	head
-		meta(charset="UTF-8")
-		meta(name="viewport" content="width=device-width,initial-scale=1")
-		link(rel="stylesheet" href="./src/styles/styles.scss")
-		title Kino-bio-movies
-	body
-		header.header
-			a(href="/kino-bio-projekt/index.html")
-				.header__logo
-			nav.header__nav
-				ul.header__nav-list
-					li.header__nav-item
-						a.header__nav-link(href="#" aria-label="Go to Biljetter") BILJETTER
-					li.header__nav-item
-						a.header__nav-link(href="#" aria-label="Go to Evenemang") EVENEMANG
-					li.header__nav-item
-						a.header__nav-link(href="movies.html" aria-label="Go to Filmer") FILMER
-					li.header__nav-item
-						a.header__nav-link(href="#" aria-label="Go to Medlemskap") MEDLEMSKAP
-					li.header__nav-item
-						a.header__nav-link(href="about-us.html" aria-label="Go to Om oss") OM OSS
-			a.header__bookTicket(aria-label="Book tickets now")
-				button.primary_button BOKA BILJETT
+extends layout.pug
+block content
 		.moviesSecond
 			.movies__message
-		.line-container
-			.horizontal-line
-		footer.footer
-			.footer__section
-				h2.footer__heading OM OSS
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") OM KINO
-					li.footer__item
-						a.footer__link(href="#") FRÅGOR & SVAR
-					li.footer__item
-						a.footer__link(href="#") KONTAKTA OSS
-			.footer__section
-				h2.footer__heading BIOUPPLEVELSER
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") PRESENTKORT
-					li.footer__item
-						a.footer__link(href="#") TILLGÄNGLIGHET
-					li.footer__item
-						a.footer__link(href="#") MEDLEMSKAP
-					li.footer__item
-						a.footer__link(href="#") BISTRO-BIO
-					li.footer__item
-						a.footer__link(href="#") EVENEMANG
-			.footer__section
-				h2.footer__heading SOCIALT
-				ul.footer__list
-					li.footer__item
-						a.footer__link(href="#") FACEBOOK
-					li.footer__item
-						a.footer__link(href="#") INSTAGRAM
-		script(type="module" src="/src/main.js")
