Added better file structure

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -6,6 +6,6 @@ html(lang="en")
 		link(rel="stylesheet" href="/static/styles/styles.scss")
 		title Kino-bio-page
 	body
-include header.pug
+include ../partials/header.pug
 block content
-include footer.pug
+include ../partials/footer.pug
