--- a/views/movieID.pug
+++ b/views/movieID.pug
@@ -8,5 +8,5 @@ block content
             else 
                 p No image available.
             h2 #{singleMovie.title}
-            p #{singleMovie.intro}
+            p !{singleMovie.intro}
             a(href="/movies") Back to all movies
