--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -4,6 +4,8 @@ html(lang="en")
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width,initial-scale=1")
 		link(rel="stylesheet" href="/static/styles/styles.scss")
+		if page === 'home'
+			script(type="module" src="/static/js/main.js")
 		title Kino-bio-page
 	body
 include ../partials/header.pug
