Fixed independent title for pages

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,4 +1,8 @@
 extends layouts/layout.pug
+
+block title
+	title Kino Uppsala - About us
+
 block content
 		section.about-us
 			.about-us__section
