--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,8 @@
 extends layouts/layout.pug
+
+block title
+	title Kino Bio Uppsala
+	
 block content
 		section.movies
 			h2.movies__header FILMER PÅ KINO
