--- a/views/movieID.pug
+++ b/views/movieID.pug
@@ -1,12 +1,15 @@
 extends layouts/layout.pug
 
+block title
+	title Kino Uppsala - #{singleMovie.title}
+
 block content 
-    div(class=movie)
-        article
-            if singleMovie.image 
-                img(src=singleMovie.image, alt=singleMovie.title, width="300")
-            else 
-                p No image available.
-            h2 #{singleMovie.title}
-            p !{singleMovie.intro}
-            a(href="/movies") Back to all movies
+		div(class=movie)
+			article
+				if singleMovie.image 
+					img(src=singleMovie.image, alt=singleMovie.title, width="300")
+				else 
+					p No image available.
+			h2 #{singleMovie.title}
+			p !{singleMovie.intro}
+			a(href="/movies") Back to all movies
