--- a/views/404.pug
+++ b/views/404.pug
@@ -4,7 +4,7 @@ block title
 	title Kino Uppsala - 404
 
 block content
-	div(class=error)
+	.error
 		h1 404 - Page not found
 		p The page you are looking for does not exist.
-		a(href="/movies") Go back to all movies
+		a.primary_button(href="/movies" aria-label="See all movies") Go back to all movies 
