--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  background-image: url('/static/images/header.jpg');
+  background-image: url("/static/images/header.jpg");
   background-size: cover;
   background-position: center top;
   height: 70vh;
@@ -14,7 +14,7 @@
 }
 
 .header__logo {
-  background-image: url('/static/images/kino-logo.png');
+  background-image: url("/static/images/kino-logo.png");
   background-size: cover;
   width: 10rem;
   height: 5rem;
@@ -137,7 +137,7 @@
   }
   .hamburger__close::before,
   .hamburger__close::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 2rem;
     left: 2rem;
@@ -516,6 +516,13 @@
   color: #dcdcdc;
   font-size: 2rem;
 }
+@media (max-width: 800px) {
+  .movies ul {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    justify-content: flex-start;
+  }
+}
 .movies ul {
   display: flex;
   flex-wrap: wrap;
@@ -525,13 +532,6 @@
   list-style: none;
   justify-content: center;
   width: 100%;
-}
-@media (max-width: 800px) {
-  .movies ul {
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    justify-content: flex-start;
-  }
 }
 .movies li {
   margin: 1rem 0.5rem;
@@ -594,15 +594,23 @@
   bottom: 0.2rem;
   right: 0.2rem;
 }
-.movies .movies__actions {
-  display: flex;
-  justify-content: space-evenly;
-}
 @media (max-width: 800px) {
   .movies .movies__actions {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+.movies .movies__actions {
+  display: flex;
+  justify-content: space-evenly;
+}
+@media (max-width: 800px) {
+  .movies .movies__actions a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem 0;
   }
 }
 .movies .movies__actions a {
@@ -618,13 +626,43 @@
   text-decoration: none;
   margin: 0 1.5rem;
 }
-@media (max-width: 800px) {
-  .movies .movies__actions a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1rem 0;
-  }
+
+.error {
+  color: white;
+  font-size: 1.5rem;
+  margin: 3rem 0;
+  text-align: center;
+}
+.error p {
+  margin: 2rem 0 4rem 0;
+}
+
+.primary_button {
+  text-decoration: none;
+}
+
+.movie__list {
+  font-family: helvetica;
+  text-align: center;
+  margin: 1rem;
+}
+.movie__list h1 {
+  font-size: 3rem;
+  color: white;
+  text-shadow: 4px 4px 10px black;
+}
+.movie__list li {
+  font-size: 1.5rem;
+  margin: 1rem;
+  list-style: none;
+  text-decoration: none;
+}
+.movie__list li:active, .movie__list :visited {
+  color: white;
+  text-decoration: none;
+}
+.movie__list a {
+  text-decoration: none;
 }
 
 .story {
@@ -854,6 +892,21 @@
 
 .moviesSecond__list__elem__rating {
   font-weight: bold;
+}
+
+.singleMovie__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem 0;
+  color: white;
+}
+.singleMovie__container h2 {
+  margin: 1rem;
+}
+.singleMovie__container p {
+  max-width: 500px;
+  text-align: center;
 }
 
 * {
