--- a/static/styles/_movieID.scss
+++ b/static/styles/_movieID.scss
@@ -7,8 +7,13 @@
   margin: 2rem 0;
   color: white;
 
+  img {
+    border-radius: 8px;
+  }
+
   h2 {
     margin: 1rem;
+    text-shadow: 4px 4px 5px black;
   }
 
   p {
