--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  background-image: url("/static/images/header.jpg");
+  background-image: url('/static/images/header.jpg');
   background-size: cover;
   background-position: center top;
   height: 70vh;
@@ -14,7 +14,7 @@
 }
 
 .header__logo {
-  background-image: url("/static/images/kino-logo.png");
+  background-image: url('/static/images/kino-logo.png');
   background-size: cover;
   width: 10rem;
   height: 5rem;
@@ -137,7 +137,7 @@
   }
   .hamburger__close::before,
   .hamburger__close::after {
-    content: "";
+    content: '';
     position: absolute;
     top: 2rem;
     left: 2rem;
