--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
 			.about-us__section
 				h2.about-us__heading OM OSS
 				.about-us__content
-					img.about-us__map-image(src="./static/assets/images/LocationMap.png" alt="Kino Bio Map")
+					img.about-us__map-image(src="./static/images/LocationMap.png" alt="Kino Bio Map")
 					.about-us__text
 						p
 							|Välkommen till 
@@ -88,7 +88,7 @@ block content
 								
 								Ingen konsumtion av olagliga substanser är tillåten, och alkoholförsäljning sker endast till personer över 18 år.
 								
-					img.rules__image(src="./static/assets/images/rulesImage.jpg" alt="the grinch holding a sign saying Rules")
+					img.rules__image(src="./static/images/rulesImage.jpg" alt="the grinch holding a sign saying Rules")
 		//  rules end 
 		//  Q&A faq 
 		section.faq
@@ -96,7 +96,7 @@ block content
 				h2.faq__heading FRÅGOR & SVAR
 				.faq__content
 					.faq__container--image
-						img.faq__image(src="./static/assets/images/QnAImage.jpg" alt="an image saying Q and A")
+						img.faq__image(src="./static/images/QnAImage.jpg" alt="an image saying Q and A")
 					.faq__question-container
 						h3.faq__question Vad är Kino?
 						p.faq__answer.
