--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -3,9 +3,9 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width,initial-scale=1")
-		link(rel="stylesheet" href="/src/styles/styles.scss")
+		link(rel="stylesheet" href="/static/styles/styles.scss")
 		if page === 'home'
-			script(type="module" src="src/js/main.js")
+			script(type="module" src="static/js/main.js")
 		block title
 			title Kino Bio - Uppsala
 	body
